objects/MDR__c.object
<CustomObject>
    <description>Holds Building info, including district, schools, site, charter, cmos</description>
    <fields>
        <fullName>ADM_HS_L__c</fullName>
        <label>Admission Req-High School Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADM_HS__c</fullName>
        <label>ADM_HS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADM_OPEN_L__c</fullName>
        <label>Admission Req-Open Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADM_OPEN__c</fullName>
        <label>ADM_OPEN</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADM_TOEF_L__c</fullName>
        <label>Admission Req-TOEFL Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADM_TOEF__c</fullName>
        <label>ADM_TOEF</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADM_TS_L__c</fullName>
        <label>Admission Req-Test Scores Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADM_TS__c</fullName>
        <label>ADM_TS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADULTED_L__c</fullName>
        <label>Adult Education Indicator Desc</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADULTED__c</fullName>
        <label>ADULTED</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFFILIATE_L__c</fullName>
        <label>Affiliation Desc</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFFILIATE__c</fullName>
        <label>AFFILIATE</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFF_INDICATOR_L__c</fullName>
        <label>Affluence Indicator Desc</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFF_INDICATOR__c</fullName>
        <label>AFF_INDICATOR</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIMEXP__c</fullName>
        <label>AIMEXP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APCOMP_L__c</fullName>
        <label>Adv Placement-Comp Science Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APCOMP__c</fullName>
        <label>APCOMP</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APENG_L__c</fullName>
        <label>Adv Placement-English Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APENG__c</fullName>
        <label>APENG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APFINE_L__c</fullName>
        <label>Adv Placement-Fine Arts Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APFINE__c</fullName>
        <label>APFINE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APFORL_L__c</fullName>
        <label>Adv Placement-Foreign Lang Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APFORL__c</fullName>
        <label>APFORL</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APMATH_L__c</fullName>
        <label>Adv Placement-Math Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APMATH__c</fullName>
        <label>APMATH</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APPMAC__c</fullName>
        <label>APPMAC</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APSCH_L__c</fullName>
        <label>Alternative School or Program Desc</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APSCH__c</fullName>
        <label>APSCH</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APSCI_L__c</fullName>
        <label>Adv Placement-Science Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APSCI__c</fullName>
        <label>APSCI</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APSOC_L__c</fullName>
        <label>Adv Placement-Social Studies Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APSOC__c</fullName>
        <label>APSOC</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_L__c</fullName>
        <label>Adv Placement Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP__c</fullName>
        <label>AP</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AREACODE__c</fullName>
        <label>AREACODE</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AUDIO_BOOKS_L__c</fullName>
        <label>Audio Books Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BEFOREAFT_L__c</fullName>
        <label>Before/After School Prog Indicator Desc</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BEFOREAFT__c</fullName>
        <label>BEFOREAFT</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BILINGED_L__c</fullName>
        <label>Bilingual Education Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BILINGED__c</fullName>
        <label>BILINGED</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLUERIBBON_L__c</fullName>
        <label>Blue Ribbon Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLUERIBBON__c</fullName>
        <label>BLUERIBBON</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CALENDAR_L__c</fullName>
        <label>Calendar System Desc</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CALENDAR__c</fullName>
        <label>CALENDAR</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CARNEGIE_L__c</fullName>
        <label>Carnegie Classification Desc</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CARNEGIE__c</fullName>
        <label>CARNEGIE</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBSA__c</fullName>
        <label>CBSA</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHARTER_L__c</fullName>
        <label>Charter School Indicator Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CKDIGIT__c</fullName>
        <label>CKDIGIT</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLOSEDATE_L__c</fullName>
        <label>Closing Date Code Desc</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLOSEDATE__c</fullName>
        <label>CLOSEDATE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLOSED__c</fullName>
        <label>CLOSED</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMO_PID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Charter Management Organization</description>
        <label>Charter Management Org</label>
        <referenceTo>MDR__c</referenceTo>
        <relationshipLabel>MDR (CMO PID)</relationshipLabel>
        <relationshipName>CMOPID</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMO_ParentPID__c</fullName>
        <label>CMO_ParentPID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNTY_NAME__c</fullName>
        <label>CNTY_NAME</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COLLTYPE_L__c</fullName>
        <label>Type of Institution Desc</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COLLTYPE__c</fullName>
        <label>COLLTYPE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COLL_BOUND__c</fullName>
        <label>COLL_BOUND</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COMPUTERS_PREDOM_L__c</fullName>
        <label>Predominant Computer Brand Desc</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COMPUTERS_PREDOM__c</fullName>
        <label>COMPUTERS_PREDOM</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COMPUTERS_TOT__c</fullName>
        <label>COMPUTERS_TOT</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRC__c</fullName>
        <label>CRC</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTECHED_L__c</fullName>
        <label>Career/Tech Ed Indicator Desc</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTECHED__c</fullName>
        <label>CTECHED</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CURREXP__c</fullName>
        <label>CURREXP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charter__c</fullName>
        <description>If this school is a charter school</description>
        <label>Charter</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISTAPPMAC_L__c</fullName>
        <label>District Apple/Mac Comp  Desc</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISTAPPMAC__c</fullName>
        <label>DISTAPPMAC</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISTCLASS_L__c</fullName>
        <label>District Classification Desc</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISTCLASS__c</fullName>
        <label>DISTCLASS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISTPC_L__c</fullName>
        <label>District PC Computer  Desc</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISTPC__c</fullName>
        <label>DISTPC</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISTSIZE_L__c</fullName>
        <label>District Enrollment Desc</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISTSIZE__c</fullName>
        <label>DISTSIZE</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIST_LEVEL_L__c</fullName>
        <label>District Grade Span Code Desc</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIST_LEVEL__c</fullName>
        <label>DIST_LEVEL</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMA__c</fullName>
        <label>DMA</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOWNLOAD_MEDIA_L__c</fullName>
        <label>Download Media Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DPBC__c</fullName>
        <label>DPBC</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_NUM__c</fullName>
        <label>DUNS_NUM</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DVD_L__c</fullName>
        <label>DVD Collections Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDUCDEPT_L__c</fullName>
        <label>Department of Education Indicator Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDUCDEPT__c</fullName>
        <label>EDUCDEPT</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENROLLCODE_L__c</fullName>
        <label>School Enrollment Desc</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENROLLCODE__c</fullName>
        <label>ENROLLCODE</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENROLLFULL__c</fullName>
        <label>ENROLLFULL</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENROLLPART__c</fullName>
        <label>ENROLLPART</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENROLL_SHIFT_L__c</fullName>
        <label>Enrollment Shift Indicator Code Desc</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENROLL_SHIFT__c</fullName>
        <label>ENROLL_SHIFT</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESL_PRG_L__c</fullName>
        <label>School Attributes English 2nd Lang Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESL_PRG__c</fullName>
        <label>ESL_PRG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETHNICCODE_L__c</fullName>
        <label>Ethnic Background Code Desc</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETHNICCODE__c</fullName>
        <label>ETHNICCODE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXCHANGE__c</fullName>
        <label>EXCHANGE</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollment__c</fullName>
        <description>Enrollment number</description>
        <label>Enrollment</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FACLTYSIZE_L__c</fullName>
        <label>Faculty Size Code Desc</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FACLTYSIZE__c</fullName>
        <label>FACLTYSIZE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FICE__c</fullName>
        <label>FICE</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FILETYPE_L__c</fullName>
        <label>File Type</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIPS__c</fullName>
        <label>FIPS</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Type__c</fullName>
        <description>Type of MDR record</description>
        <label>File Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bureau of Indian Affairs (BIA) Schools</fullName>
                </value>
                <value>
                    <fullName>Canadian Districts</fullName>
                </value>
                <value>
                    <fullName>Canadian Private Schools</fullName>
                </value>
                <value>
                    <fullName>Canadian Public Schools</fullName>
                </value>
                <value>
                    <fullName>Catholic Schools</fullName>
                </value>
                <value>
                    <fullName>Charter Management Organizations (CMO)</fullName>
                </value>
                <value>
                    <fullName>Colleges</fullName>
                </value>
                <value>
                    <fullName>County Centers</fullName>
                </value>
                <value>
                    <fullName>County Operated Schools</fullName>
                </value>
                <value>
                    <fullName>Day Care Centers</fullName>
                </value>
                <value>
                    <fullName>Diocesan Offices</fullName>
                </value>
                <value>
                    <fullName>Districts</fullName>
                </value>
                <value>
                    <fullName>Libraries</fullName>
                </value>
                <value>
                    <fullName>Private Schools</fullName>
                </value>
                <value>
                    <fullName>Public Schools</fullName>
                </value>
                <value>
                    <fullName>Regional Centers</fullName>
                </value>
                <value>
                    <fullName>State Departments</fullName>
                </value>
                <value>
                    <fullName>State Operated Schools</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GEO_LAT__c</fullName>
        <label>GEO_LAT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEO_LEVEL_L__c</fullName>
        <label>Geocoding Match Code Desc</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEO_LEVEL__c</fullName>
        <label>GEO_LEVEL</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEO_LONG__c</fullName>
        <label>GEO_LONG</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GROUP__c</fullName>
        <label>GROUP</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HIGHGRADE_L__c</fullName>
        <label>Highest grade of Institution Desc</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HIGHGRADE__c</fullName>
        <label>HIGHGRADE</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HIGHOFFER_L__c</fullName>
        <label>Highest Degree Offered Desc</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HIGHOFFER__c</fullName>
        <label>HIGHOFFER</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOSTS_WEBINARS_L__c</fullName>
        <label>Host Webinars Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INST_SPEC_L__c</fullName>
        <label>MDR Institution Specific Desc</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INST_SPEC__c</fullName>
        <label>INST_SPEC</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INST_TYPE_L__c</fullName>
        <label>MDR Institution Type Desc</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INST_TYPE__c</fullName>
        <label>INST_TYPE</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INT_BACC_L__c</fullName>
        <label>School Int&apos;l Baccalaureate Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INT_BACC__c</fullName>
        <label>INT_BACC</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPEDSNUM__c</fullName>
        <label>IPEDSNUM</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LIBTYPE_L__c</fullName>
        <label>Library Type Desc</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LIB_MEDIA_CTR_L__c</fullName>
        <label>School Library Media Center Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LIB_MEDIA_CTR__c</fullName>
        <label>LIB_MEDIA_CTR</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOWGRADE_L__c</fullName>
        <label>Lowest Grade of Institution Desc</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOWGRADE__c</fullName>
        <label>LOWGRADE</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAGNET_L__c</fullName>
        <label>Magnet School/Program Indicator Desc</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAGNET__c</fullName>
        <label>MAGNET</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCITY__c</fullName>
        <label>MCITY</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MEDIASERV_L__c</fullName>
        <label>Media Services Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MEDIASERV__c</fullName>
        <label>MEDIASERV</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPOWER_L__c</fullName>
        <label>Market Power Desc</label>
        <length>92</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPOWER__c</fullName>
        <label>MPOWER</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSTATE__c</fullName>
        <label>MSTATE</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSTREET__c</fullName>
        <label>MSTREET</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MZIPCODE__c</fullName>
        <label>MZIPCODE</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MZIPEXT__c</fullName>
        <label>MZIPEXT</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCESHID__c</fullName>
        <label>NCESHID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NUMBER__c</fullName>
        <label>NUMBER</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NUM_CLASS__c</fullName>
        <label>NUM_CLASS</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Schools__c</fullName>
        <description>Number of Schools - pertains to districts</description>
        <label>Number of Schools</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPENDATE_L__c</fullName>
        <label>Opening Date Code Desc</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPENDATE__c</fullName>
        <label>OPENDATE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPENED__c</fullName>
        <label>OPENED</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCITY__c</fullName>
        <label>PCITY</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCKDIGIT__c</fullName>
        <label>PCKDIGIT</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCRC__c</fullName>
        <label>PCRC</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC__c</fullName>
        <label>PC</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDPBC__c</fullName>
        <label>PDPBC</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PERASIAN__c</fullName>
        <label>PERASIAN</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PERBLACK__c</fullName>
        <label>PERBLACK</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PERHISP__c</fullName>
        <label>PERHISP</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PERINDIAN__c</fullName>
        <label>PERINDIAN</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PERWHITE__c</fullName>
        <label>PERWHITE</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PID__c</fullName>
        <description>Unique Identifier for MDR</description>
        <externalId>true</externalId>
        <label>PID</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>POVLVLCODE_L__c</fullName>
        <label>Poverty Level</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POVPER__c</fullName>
        <label>POVPER</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROFTYPE_L__c</fullName>
        <label>Professional Type Desc</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROFTYPE__c</fullName>
        <label>PROFTYPE</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSTATE__c</fullName>
        <label>PSTATE</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSTREET__c</fullName>
        <label>PSTREET</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PUPEXPAIM_L__c</fullName>
        <label>Spend for Student Instructional Material</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PUPEXPAIM__c</fullName>
        <description>per student spend on instructional materials</description>
        <label>Spend for Student Instructional Material</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>.01 -144.99</fullName>
                </value>
                <value>
                    <fullName>145.00 - 179.99</fullName>
                </value>
                <value>
                    <fullName>180.00 - 199.99</fullName>
                </value>
                <value>
                    <fullName>200.00 - 219.99</fullName>
                </value>
                <value>
                    <fullName>220.00 - 249.99</fullName>
                </value>
                <value>
                    <fullName>250.00 - 269.99</fullName>
                </value>
                <value>
                    <fullName>270.00 - 299.99</fullName>
                </value>
                <value>
                    <fullName>300.00 - 349.99</fullName>
                </value>
                <value>
                    <fullName>350.00 - 399.99</fullName>
                </value>
                <value>
                    <fullName>400.00 - 499.99</fullName>
                </value>
                <value>
                    <fullName>500 +</fullName>
                </value>
                <value>
                    <fullName>Unclassified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PUPEXPCURR_L__c</fullName>
        <label>Per Pupil Current Exp Desc</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PUPEXPCURR__c</fullName>
        <label>PUPEXPCURR</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PZIPCODE__c</fullName>
        <label>PZIPCODE</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PZIPEXT__c</fullName>
        <label>PZIPEXT</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentPID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent PID usually rolls up to District</description>
        <label>Parent District/Local</label>
        <referenceTo>MDR__c</referenceTo>
        <relationshipLabel>MDR</relationshipLabel>
        <relationshipName>ParentPid</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Potential__c</fullName>
        <formula>Enrollment__c * 57</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Poverty_Level__c</fullName>
        <description>Level of Poverty - more poverty more government funding school or district receives</description>
        <label>Poverty Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - 5.9 Percent</fullName>
                </value>
                <value>
                    <fullName>6 - 15.9 Percent</fullName>
                </value>
                <value>
                    <fullName>16 - 30.9 Percent</fullName>
                </value>
                <value>
                    <fullName>31 Percent Or More</fullName>
                </value>
                <value>
                    <fullName>Unclassified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RECTYPE_L__c</fullName>
        <label>Record Type Desc</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RECTYPE__c</fullName>
        <label>RECTYPE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCHCLASS_L__c</fullName>
        <description>Major Grade Range</description>
        <label>School Class</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCHTYPE_L__c</fullName>
        <label>School Type Desc</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCHTYPE__c</fullName>
        <label>SCHTYPE</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCHYRCLOSE_L__c</fullName>
        <label>School Year Closing Desc</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCHYRCLOSE__c</fullName>
        <label>SCHYRCLOSE</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCHYROPEN_L__c</fullName>
        <label>School Year Opening Desc</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCHYROPEN__c</fullName>
        <label>SCHYROPEN</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPECED_L__c</fullName>
        <label>Special Education Indicator Desc</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPECED__c</fullName>
        <label>SPECED</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPECIAL_NEEDS_SERV_L__c</fullName>
        <label>Special Needs Service Desc</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATE_NAME__c</fullName>
        <label>STATE_NAME</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STUDNTBODY_L__c</fullName>
        <label>Student Body Gender Code Desc</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STUDNTBODY__c</fullName>
        <label>STUDNTBODY</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STU_COMP_RATIO_L__c</fullName>
        <label>Student to Computer Ratio Desc</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STU_COMP_RATIO__c</fullName>
        <label>STU_COMP_RATIO</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBABUSE_L__c</fullName>
        <label>Substance Abuse Program Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBABUSE__c</fullName>
        <label>SUBABUSE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBGROUP__c</fullName>
        <label>SUBGROUP</label>
        <length>2</length>
        <type>Text</type>
    </fields>
</CustomObject>